tests/integration/snapshots/integration__diagnostic_snapshots__diag_misspelled_ability_name.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "unresolved name `MyEffec::do_something`"
  span:
    start: 84
    end: 105
  severity: Error
  phase: NameResolution
