tests/integration/snapshots/integration__diagnostic_snapshots__diag_non_exhaustive_case.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "non-exhaustive case expression: not all cases are covered"
  span:
    start: 35
    end: 36
  severity: Error
  phase: TypeChecking
