tests/integration/snapshots/integration__diagnostic_snapshots__diag_non_exhaustive_list_patterns.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "non-exhaustive case expression: list patterns do not cover all lengths"
  span:
    start: 43
    end: 45
  severity: Error
  phase: TypeChecking
