tests/integration/snapshots/integration__diagnostic_snapshots__diag_non_exhaustive_nested_variant.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "non-exhaustive case expression: missing patterns: Some(False)"
  span:
    start: 44
    end: 45
  severity: Error
  phase: TypeChecking
