tests/integration/snapshots/integration__diagnostic_snapshots__diag_non_exhaustive_tuple_case.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "non-exhaustive case expression: missing patterns: #(False, False)"
  span:
    start: 45
    end: 52
  severity: Error
  phase: TypeChecking
