tests/integration/snapshots/integration__diagnostic_snapshots__diag_resume_in_never_operation_arm.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "cannot `resume` in the handler for `Stop::stop`, which returns `Never`"
  span:
    start: 137
    end: 145
  severity: Error
  phase: TypeChecking
