tests/integration/snapshots/integration__diagnostic_snapshots__diag_syntax_error.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "syntax error: unmatched `(`, expected `)`"
  span:
    start: 0
    end: 12
  severity: Error
  phase: Parsing
