tests/integration/snapshots/integration__diagnostic_snapshots__diag_type_mismatch_in_function.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "type error at call site in function 'test': expected `Int`, found `Nat`"
  span:
    start: 65
    end: 80
  severity: Error
  phase: TypeChecking
