tests/integration/snapshots/integration__diagnostic_snapshots__diag_unhandled_effect_in_main.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "function 'main' has unhandled effects: MyEffect"
  span:
    start: 52
    end: 101
  severity: Error
  phase: TypeChecking
- message: "function 'main' must return Nil, but returns `Int`"
  span:
    start: 52
    end: 101
  severity: Error
  phase: TypeChecking
