tests/integration/snapshots/integration__diagnostic_snapshots__diag_unhandled_effect_multiple.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "function 'main' has unhandled effects: Foo, Bar"
  span:
    start: 75
    end: 125
  severity: Error
  phase: TypeChecking
